Support redis EX and PX expiry params